--- a/irisAnalysis.ipynb
+++ b/irisAnalysis.ipynb
@@ -776,14 +776,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Conclusion"
+    "## Conclusion"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### In conclusion, the analysis of the iris dataset reveals distinct patterns in sepal and petal measurements among the three iris species: Setosa, Versicolor, and Virginica. Setosa is characterized by smaller sepal and petal dimensions, particularly in petal length and width. Versicolor and Virginica exhibit some overlap in sepal measurements, but they are more clearly differentiated by petal characteristics. Petal length and width prove to be crucial factors in distinguishing between Versicolor and Virginica. Overall, these findings underscore the value of sepal and petal features in classifying iris species and highlight the unique morphological characteristics of each species."
+    "* In conclusion, the analysis of the iris dataset reveals distinct patterns in sepal and petal measurements among the three iris species: Setosa, Versicolor, and Virginica. Setosa is characterized by smaller sepal and petal dimensions, particularly in petal length and width. Versicolor and Virginica exhibit some overlap in sepal measurements, but they are more clearly differentiated by petal characteristics. Petal length and width prove to be crucial factors in distinguishing between Versicolor and Virginica. Overall, these findings underscore the value of sepal and petal features in classifying iris species and highlight the unique morphological characteristics of each species."
    ]
   }
  ],
